# Synthetic-CommercialDataGenerator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: 00-INDEX.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DATA_MODEL.md  OPERATIONS.md
docs/api/: 01-api-specification.md  02-data-contracts.md
docs/architecture/: 01-project-overview.md  02-system-architecture.md  03-technology-stack.md  04-project-structure.md  05-configuration.md
docs/data-generation/: 01-customer-segmentation.md  02-customer-profile-generator.md  03-sales-data-generator.md  04-payment-data-generator.md  05-returns-data-generator.md  06-statistical-realism.md  07-scalability.md
docs/database/: 01-schema-design.md  02-migration-strategy.md
docs/deployment/: 01-deployment-guide.md
docs/testing/: 01-testing-strategy.md
src/synth_data_creator/: __init__.py  main.py
src/synth_data_creator/api/: app.py  dependencies.py
src/synth_data_creator/core/: __init__.py  config.py  exceptions.py  logging.py
src/synth_data_creator/db/: __init__.py  bulk_ops.py  engine.py  models.py  schema_init.py
src/synth_data_creator/generation/: __init__.py  events.py  exporters.py  orchestrator.py  simulation.py
tests/: behavioral_validation.py  check_kpis.py  conftest.py
tests/test_api/: test_exceptions.py  test_generation.py  test_health.py
tests/test_db/: test_bulk_ops.py  test_schema_init.py
tests/test_generation/: test_customers.py  test_events.py  test_payments.py  test_returns.py  test_sales.py
tests/test_stats/: test_distributions.py
(+25 files in other folders)
